--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+pessoa.table=pessoa
+
+spring.main.web-application-type=none
+
 #spring.data.rest.base-path=/api
 
 
